Modification de la couleur du fond

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Projet B1</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h3>Projet du cours de git b1</h3>
