Ajout d'une image

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
       <li>Maxime</li>
       <li>Yann</li>
     </ul>
+
+    <p>Image du site de travail</p>
+    <img class="image" src="./image1.png" alt="Image de travail">
   </body>
 </html>
