--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h3>Projet du cours de git b1</h3>
-    <p>Liste des participants</p>
+    <p>Liste des bavards</p>
     <ul>
       <li>Junior</li>
       <li>Antoine</li>
