--- a/boris.html
+++ b/boris.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h3>A propos de moi :</h3>
-    <p>Je suis un vieux enseignant dans le domaine informatique et plus precisement en programmation informatique.</p><br>
-    
+    <p>Je suis un vieux enseignant dans le domaine informatique et plus precisement en programmation informatique.</p>
+    <br>
+    <p>lolo</p>
 </body>
+
 </html>
